--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@ svg {
     cursor: pointer;
 }
 
+svg:hover{
+    opacity: 0.75;
+}
+
 header,
 footer,
 main {
@@ -41,7 +45,6 @@ footer {
     align-items: center;
 }
 
-.rsschool,
 .github {
     width: 5rem;
 }
@@ -50,10 +53,4 @@ footer {
     width: 3rem;
     height: 3rem;
     background-size: 100% 100%;
-}
-
-.rsschool:hover,
-.image_github:hover,
-.orientation div:hover {
-    opacity: 0.75;
 }
